fix(css): change gutters size for grif project on mobile

--- a/assets/sass/projects.scss
+++ b/assets/sass/projects.scss
@@ -4,6 +4,14 @@
 .project {
   &__card {
     width: 100%;
+    & > a {
+      display: block;
+      margin-top: 18px;
+      &:hover {
+        text-decoration: underline;
+        text-underline-offset: 8px;
+      }
+    }
   }
   &__picture {
     width: 100%;
@@ -18,14 +26,26 @@
   }
 }
 
-.projects-grid.container-fluid {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-.projects-grid .row {
-  --bs-gutter-x: 60px;
-  & + .row {
-    margin-top: 120px;
+.projects {
+  &-grid {
+    @media (max-width: 768px) {
+      padding-bottom: 60px;
+    }
+  }
+  &-grid.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  &-grid .row {
+    --bs-gutter-x: 60px;
+    @media (max-width: 768px) {
+      --bs-gutter-y: 60px;
+    }
+    & + .row {
+      margin-top: 120px;
+      @media (max-width: 768px) {
+        margin-top: 0px;
+      }
+    }
   }
 }
